syntax = "proto3";

package Firehose;

message Message {
    string name = 1;
    string data = 2;

    message Incoming {
        ClientDescription client = 1;
        PoolDescription pool = 2;
        Message message = 3;
    }

    message Outgoing {
        ClientDescription client = 1;
        Message message = 2;
    }

    message Pop {
        string id = 1;
    }

    message Result {}
}

message PoolDescription {
    int64 size = 1;
}

message ClientDescription {
    string id = 1;
    string remoteAddress = 2;
}

message Close {
   ClientDescription client = 1;
   message Result {}
}

service Queue {
    rpc pop (Message.Pop) returns (Message.Incoming);
    rpc close (Close) returns (Close.Result);
    rpc send (Message.Outgoing) returns (Message.Result);
    rpc sendAll(Message) returns (Message.Result);
}
